--- a/style.css
+++ b/style.css
@@ -11,7 +11,6 @@ body {
     margin: 85px;
     background: rgb(238, 233, 233);
 }
-
 nav ul {
     display: flex;
     list-style: none;
@@ -19,13 +18,13 @@ nav ul {
     background-color: lightskyblue;
     padding: 15px;
 }
-li a{
+li a {
     text-decoration: none;
-    letter-spacing: .5px;
+    letter-spacing: 1px;
     position: relative;
     color: white;
 }
-li a:after{
+li a:after {
     content: "";
     position: absolute;
     background: orangered;
@@ -38,18 +37,8 @@ li a:after{
 a:hover {
     color: orangered;
     font-size: 26px;
+
 }
 a:hover::after{
     width: 100%;
-}
-
-
-header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 70vh;
-}
-p {
-    font-size: 35px;
 }
